Added several new weapons and tools

--- a/fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -33,6 +33,10 @@
   "item.forgero.mining_speed": "Mining speed",
   "item.forgero.slots": "Slots",
   "item.forgero.attributes": "Attributes",
+  "item.forgero.properties": "Properties",
+  "item.forgero.vein_mining": "Vein Mining",
+  "item.forgero.pattern_mining": "Pattern mining",
+  "item.forgero.soul_reaping": "Soul Reaping",
   "item.forgero.ingredients": "Ingredients",
   "item.forgero.sword_tip": "Sword tip",
   "item.forgero.sword_blade": "Sword blade",
@@ -65,62 +69,6 @@
   "item.forgero.mastercrafted_handle": "Mastercrafted handle",
   "item.forgero.reinforcement": "Reinforcement",
   "item.forgero.magnetico_gem": "Magnetico Gem",
-  "item.forgero.oak": "Oak",
-  "item.forgero.spruce": "Spruce",
-  "item.forgero.birch": "Birch",
-  "item.forgero.acacia": "Acacia",
-  "item.forgero.jungle": "Jungle",
-  "item.forgero.dark_oak": "Dark oak",
-  "item.forgero.stone": "Stone",
-  "item.forgero.iron": "Iron",
-  "item.forgero.gold": "Gold",
-  "item.forgero.copper": "Copper",
-  "item.forgero.diorite": "Diorite",
-  "item.forgero.granite": "Granite",
-  "item.forgero.andesite": "Andesite",
-  "item.forgero.glowstone": "Glowstone",
-  "item.forgero.leather": "Leather",
-  "item.forgero.warped": "Warped",
-  "item.forgero.crimson": "Crimson",
-  "item.forgero.rabbit_hide": "Rabbit hide",
-  "item.forgero.phantom_membrane": "Phantom membrane",
-  "item.forgero.diamond": "Diamond",
-  "item.forgero.netherite": "Netherite",
-  "item.forgero.adamantite": "Adamantite",
-  "item.forgero.aquarium": "Aquarium",
-  "item.forgero.banglum": "Banglum",
-  "item.forgero.bronze": "Bronze",
-  "item.forgero.carmot": "Carmot",
-  "item.forgero.celestium": "Celestium",
-  "item.forgero.hallowed": "Hallowed",
-  "item.forgero.durasteel": "Durasteel",
-  "item.forgero.kyber": "Kyber",
-  "item.forgero.manganese": "Manganese",
-  "item.forgero.metallurgium": "Metallurgium",
-  "item.forgero.midasgold": "Midas Gold",
-  "item.forgero.mythril": "Mythril",
-  "item.forgero.orichalcum": "Orichalcum",
-  "item.forgero.osmium": "Osmium",
-  "item.forgero.palladium": "Palladium",
-  "item.forgero.prometheum": "Prometheum",
-  "item.forgero.platinum": "Platinum",
-  "item.forgero.quadrillum": "Quadrillum",
-  "item.forgero.runite": "Runite",
-  "item.forgero.silver": "Silver",
-  "item.forgero.star_platinum": "Star Platinum",
-  "item.forgero.steel": "Steel",
-  "item.forgero.stormyx": "Stormyx",
-  "item.forgero.starrite": "Starrite",
-  "item.forgero.tin": "Tin",
-  "item.forgero.atanium": "Atanium",
-  "item.forgero.cupronickel": "Cupronickel",
-  "item.forgero.invar": "Invar",
-  "item.forgero.nickel": "Nickel",
-  "item.forgero.nitinol": "Nitinol",
-  "item.forgero.titanium": "Titanium",
-  "item.forgero.titanium_gold": "Titanium Gold",
-  "item.forgero.constantan": "Constantan",
-  "item.forgero.therrassium": "Therrassium",
   "item.forgero.handle": "Handle",
   "item.forgero.binding": "Binding",
   "item.forgero.head": "Head",
@@ -143,21 +91,6 @@
   "item.forgero.tsuba_binding": "Tsuba Binding",
   "item.forgero.pattern_axe": "Axe",
   "item.forgero.pattern_axehead": "Pattern mining Axe head",
-  "item.forgero.vein_axe": "Axe",
-  "item.forgero.vein_axehead": "Vein mining Axe head",
-  "item.forgero.weakvein_axehead": "Vein mining Axe head",
-  "item.forgero.pattern_pickaxe": "Pickaxe",
-  "item.forgero.pattern_pickaxehead": "Pattern mining Pickaxe head",
-  "item.forgero.vein_pickaxe": "Pickaxe",
-  "item.forgero.vein_pickaxehead": "Pattern mining Pickaxe Pickaxe",
-  "item.forgero.pattern_hoe": "Hoe",
-  "item.forgero.pattern_hoehead": "Pattern mining Hoe head",
-  "item.forgero.vein_hoe": "Hoe",
-  "item.forgero.vein_hoehead": "Vein mining Hoe head",
-  "item.forgero.pattern_shovel": "Shovel",
-  "item.forgero.pattern_shovelhead": "Pattern mining shovel head",
-  "item.forgero.vein_shovel": "Shovel",
-  "item.forgero.vein_shovelhead": "Vein mining shovel head",
   "item.forgero.knife": "Knife",
   "item.forgero.pickaxe": "Pickaxe",
   "item.forgero.shovel": "Shovel",
@@ -167,123 +100,5 @@
   "item.forgero.axehead": "Axehead",
   "item.forgero.schematic": "Schematic",
   "item.forgero.dense": "Dense",
-  "item.forgero.reinforced": "Reinforced",
-  "item.forgero.vein": "Vein mining",
-  "item.forgero.pattern": "Pattern mining",
-  "item.forgero.weakvein_axe": "Weak Axe",
-  "item.forgero.oak_handle_default": "Oak handle",
-  "item.forgero.birch_handle_default": "Birch handle",
-  "item.forgero.spruce_handle_default": "Spruce handle",
-  "item.forgero.stone_handle_default": "Stone handle",
-  "item.forgero.iron_handle_default": "Iron handle",
-  "item.forgero.gold_handle_default": "Gold handle",
-  "item.forgero.diamond_handle_default": "Diamond handle",
-  "item.forgero.netherite_handle_default": "Netherite handle",
-  "item.forgero.oak_handle_dense": "Dense Oak handle",
-  "item.forgero.birch_handle_dense": "Dense Birch handle",
-  "item.forgero.stone_handle_dense": "Dense Stone handle",
-  "item.forgero.acacia_handle_dense": "Dense Acacia handle",
-  "item.forgero.iron_handle_dense": "Dense Iron handle",
-  "item.forgero.gold_handle_dense": "Dense Gold handle",
-  "item.forgero.diamond_handle_dense": "Dense Diamond handle",
-  "item.forgero.netherite_handle_dense": "Dense Netherite handle",
-  "item.forgero.oak_handle_reinforced": "Reinforced Oak handle",
-  "item.forgero.birch_handle_reinforced": "Reinforced Birch handle",
-  "item.forgero.stone_handle_reinforced": "Reinforced Stone handle",
-  "item.forgero.acacia_handle_reinforced": "Reinforced Acacia handle",
-  "item.forgero.iron_handle_reinforced": "Reinforced Iron handle",
-  "item.forgero.gold_handle_reinforced": "Reinforced Gold handle",
-  "item.forgero.diamond_handle_reinforced": "Reinforced Diamond handle",
-  "item.forgero.netherite_handle_reinforced": "Reinforced Netherite handle",
-  "item.forgero.oak_binding_default": "Oak binding",
-  "item.forgero.birch_binding_default": "Birch binding",
-  "item.forgero.spruce_binding_default": "Spruce binding",
-  "item.forgero.stone_binding_default": "Stone binding",
-  "item.forgero.iron_binding_default": "Iron binding",
-  "item.forgero.gold_binding_default": "Gold binding",
-  "item.forgero.diamond_binding_default": "Diamond binding",
-  "item.forgero.netherite_binding_default": "Netherite binding",
-  "item.forgero.oak_pickaxe_head": "Oak pickaxe head",
-  "item.forgero.birch_pickaxe_head": "Birch pickaxe head",
-  "item.forgero.spruce_pickaxe_head": "Spruce pickaxe head",
-  "item.forgero.stone_pickaxe_head": "Stone pickaxe head",
-  "item.forgero.iron_pickaxe_head": "Iron pickaxe head",
-  "item.forgero.gold_pickaxe_head": "Gold pickaxe head",
-  "item.forgero.diamond_pickaxe_head": "Diamond pickaxe head",
-  "item.forgero.netherite_pickaxe_head": "Netherite pickaxe head",
-  "item.forgero.oak_shovel_head": "Oak shovel head",
-  "item.forgero.birch_shovel_head": "Birch shovel head",
-  "item.forgero.spruce_shovel_head": "Spruce shovel head",
-  "item.forgero.stone_shovel_head": "Stone shovel head",
-  "item.forgero.iron_shovel_head": "Iron shovel head",
-  "item.forgero.gold_shovel_head": "Gold shovel head",
-  "item.forgero.diamond_shovel_head": "Diamond shovel head",
-  "item.forgero.netherite_shovel_head": "Netherite shovel head",
-  "item.forgero.iron_pickaxe": "Iron pickaxe",
-  "item.forgero.oak_pickaxe": "Oak pickaxe",
-  "item.forgero.birch_pickaxe": "Birch pickaxe",
-  "item.forgero.spruce_pickaxe": "Spruce pickaxe",
-  "item.forgero.stone_pickaxe": "Stone pickaxe",
-  "item.forgero.gold_pickaxe": "Gold pickaxe",
-  "item.forgero.acacia_pickaxe": "Acacia pickaxe",
-  "item.forgero.diamond_pickaxe": "Diamond pickaxe",
-  "item.forgero.netherite_pickaxe": "Netherite pickaxe",
-  "item.forgero.iron_shovel": "Iron shovel",
-  "item.forgero.acacia_shovel": "Acacia shovel",
-  "item.forgero.oak_shovel": "Oak shovel",
-  "item.forgero.birch_shovel": "Birch shovel",
-  "item.forgero.spruce_shovel": "Spruce shovel",
-  "item.forgero.stone_shovel": "Stone shovel",
-  "item.forgero.gold_shovel": "Gold shovel",
-  "item.forgero.diamond_shovel": "Diamond shovel",
-  "item.forgero.netherite_shovel": "Diamond shovel",
-  "item.forgero.netherite_shovelhead": "Netherite shovel head",
-  "item.forgero.oak_shovelhead": "Oak shovel head",
-  "item.forgero.birch_shovelhead": "Birch shovel head",
-  "item.forgero.spruce_shovelhead": "Spruce shovel head",
-  "item.forgero.stone_shovelhead": "Stone shovel head",
-  "item.forgero.iron_shovelhead": "Iron shovel head",
-  "item.forgero.gold_shovelhead": "Gold shovel head",
-  "item.forgero.diamond_shovelhead": "Diamond shovel head",
-  "item.forgero.netherite_pickaxehead": "Netherite shovel head",
-  "item.forgero.oak_pickaxehead": "Oak pickaxe head",
-  "item.forgero.acacia_pickaxehead": "Acacia pickaxe head",
-  "item.forgero.birch_pickaxehead": "Birch pickaxe head",
-  "item.forgero.spruce_pickaxehead": "Spruce pickaxe head",
-  "item.forgero.stone_pickaxehead": "Stone pickaxe head",
-  "item.forgero.iron_pickaxehead": "Iron pickaxe head",
-  "item.forgero.gold_pickaxehead": "Gold pickaxe head",
-  "item.forgero.diamond_pickaxehead": "Diamond pickaxe head",
-  "item.forgero.netherite_axehead": "Netherite axe head",
-  "item.forgero.oak_axehead": "Oak axe head",
-  "item.forgero.acacia_axehead": "Acacia axe head",
-  "item.forgero.birch_axehead": "Birch axe head",
-  "item.forgero.spruce_axehead": "Spruce axe head",
-  "item.forgero.stone_axehead": "Stone axe head",
-  "item.forgero.iron_axehead": "Iron axe head",
-  "item.forgero.gold_axehead": "Gold axe head",
-  "item.forgero.diamond_axehead": "Diamond axe head",
-  "item.forgero.acacia_axe": "Acacia axe",
-  "item.forgero.birch_axe": "Birch axe",
-  "item.forgero.spruce_axe": "Spruce axe",
-  "item.forgero.stone_axe": "Stone axe",
-  "item.forgero.iron_axe": "Iron axe",
-  "item.forgero.gold_axe": "Gold axe",
-  "item.forgero.warped_axe": "Warped axe",
-  "item.forgero.crimson_axe": "Crimson axe",
-  "item.forgero.andesite_axe": "Andesite axe",
-  "item.forgero.jungle_axe": "Jungle axe",
-  "item.forgero.darkoak_axe": "Dark oak axe",
-  "item.forgero.diorite_axe": "Diorite axe",
-  "item.forgero.diamond_axe": "Diamond axe",
-  "item.forgero.netherite_axe": "Netherite axe",
-  "item.forgero.emerald-gem": "Emerald gem",
-  "item.forgero.diamond-gem": "Diamond gem",
-  "item.forgero.redstone-gem": "Redstone gem",
-  "item.forgero.lapis-gem": "Lapis Lazuli gem",
-  "item.forgero.ender-gem": "Ender gem",
-  "item.forgero.stoneheart-gem": "Stoneheart gem",
-  "item.forgero.blazed_stoneheart-gem": "Blazed Stoneheart gem",
-  "item.forgero.magnetico-gem": "Magnetico gem",
-  "item.forgero.quartz-gem": "Quartz gem"
+  "item.forgero.reinforced": "Reinforced"
 }
