--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -19,5 +19,52 @@
   "item.forgero.katana_blade": "Katana blade",
   "item.forgero.broadsword_blade": "Broadsword blade",
   "item.forgero.shortsword_blade": "Shortsword blade",
-  "item.forgero.knife_blade": "Knife blade"
+  "item.forgero.refined_sword_blade": "Refined Sword blade",
+  "item.forgero.mastercrafted_sword_blade": "Mastercrafted Sword blade",
+  "item.forgero.serrated_sword_blade": "Serrated Sword blade",
+  "item.forgero.knife_blade": "Knife blade",
+  "item.forgero.battle_axe_head": "Battle Axe head",
+  "item.forgero.lightweight_pickaxe_head": "Lightweight Pickaxe head",
+  "description.forgero.lightweight_pickaxe_head": "A light, yet powerful pickaxe head",
+  "item.forgero.refined_pickaxe_head": "Refined Pickaxe head",
+  "description.forgero.refined_pickaxe_head": "A classic, but significantly improved pickaxe head",
+  "item.forgero.mastercrafted_pickaxe_head": "Mastercrafted Pickaxe head",
+  "description.forgero.mastercrafted_pickaxe_head": "A truly masterfully designed pickaxe head, better in every way",
+  "item.forgero.path_mining_pickaxe_head": "Path Mining Pickaxe head",
+  "description.forgero.path_mining_pickaxe_head": "A unique pickaxe head, capable of mining a perfect corridor",
+  "item.forgero.adamantite": "Adamantite",
+  "item.forgero.aquarium": "Aquarium",
+  "item.forgero.banglum": "Banglum",
+  "item.forgero.bronze": "Bronze",
+  "item.forgero.carmot": "Carmot",
+  "item.forgero.celestium": "Celestium",
+  "item.forgero.hallowed": "Hallowed",
+  "item.forgero.durasteel": "Durasteel",
+  "item.forgero.kyber": "Kyber",
+  "item.forgero.manganese": "Manganese",
+  "item.forgero.metallurgium": "Metallurgium",
+  "item.forgero.midasgold": "Midas Gold",
+  "item.forgero.mythril": "Mythril",
+  "item.forgero.orichalcum": "Orichalcum",
+  "item.forgero.osmium": "Osmium",
+  "item.forgero.palladium": "Palladium",
+  "item.forgero.prometheum": "Prometheum",
+  "item.forgero.platinum": "Platinum",
+  "item.forgero.quadrillum": "Quadrillum",
+  "item.forgero.runite": "Runite",
+  "item.forgero.silver": "Silver",
+  "item.forgero.star_platinum": "Star Platinum",
+  "item.forgero.steel": "Steel",
+  "item.forgero.stormyx": "Stormyx",
+  "item.forgero.starrite": "Starrite",
+  "item.forgero.tin": "Tin",
+  "item.forgero.atanium": "Atanium",
+  "item.forgero.cupronickel": "Cupronickel",
+  "item.forgero.invar": "Invar",
+  "item.forgero.nickel": "Nickel",
+  "item.forgero.nitinol": "Nitinol",
+  "item.forgero.titanium": "Titanium",
+  "item.forgero.titanium_gold": "Titanium Gold",
+  "item.forgero.constantan": "Constantan",
+  "item.forgero.therrassium": "Therrassium"
 }
