--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,11 +1,30 @@
 {
-  "item.forgero.passives": "Passives",
-  "item.forgero.soul_reaping": "Soul Reaping",
   "item.forgero.string": "String",
   "item.forgero.vine": "Vines",
   "item.forgero.twisting_vines": "Twisting Vines",
   "item.forgero.weeping_vines": "Weeping Vines",
   "item.forgero.secondary_material": "Soft Material",
   "item.forgero.deepslate": "Deepslate",
-  "item.forgero.calcite": "Calcite"
+  "item.forgero.calcite": "Calcite",
+  "item.forgero.oak": "Oak",
+  "item.forgero.spruce": "Spruce",
+  "item.forgero.birch": "Birch",
+  "item.forgero.acacia": "Acacia",
+  "item.forgero.jungle": "Jungle",
+  "item.forgero.dark_oak": "Dark oak",
+  "item.forgero.stone": "Stone",
+  "item.forgero.iron": "Iron",
+  "item.forgero.gold": "Gold",
+  "item.forgero.copper": "Copper",
+  "item.forgero.diorite": "Diorite",
+  "item.forgero.granite": "Granite",
+  "item.forgero.andesite": "Andesite",
+  "item.forgero.glowstone": "Glowstone",
+  "item.forgero.leather": "Leather",
+  "item.forgero.warped": "Warped",
+  "item.forgero.crimson": "Crimson",
+  "item.forgero.rabbit_hide": "Rabbit hide",
+  "item.forgero.phantom_membrane": "Phantom membrane",
+  "item.forgero.diamond": "Diamond",
+  "item.forgero.netherite": "Netherite"
 }
