--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -24,6 +24,8 @@
   "item.forgero.serrated_sword_blade": "Serrated Sword blade",
   "item.forgero.knife_blade": "Knife blade",
   "item.forgero.battle_axe_head": "Battle Axe head",
+  "item.forgero.path_digger_shovel_head": "Path Digger head",
+  "item.forgero.grave_digger_head": "Grave Digger head",
   "item.forgero.lightweight_pickaxe_head": "Lightweight Pickaxe head",
   "description.forgero.lightweight_pickaxe_head": "A light, yet powerful pickaxe head",
   "item.forgero.refined_pickaxe_head": "Refined Pickaxe head",
