--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -15,6 +15,8 @@
   "item.forgero.magnetico": "Magnetico",
   "item.forgero.quartz": "Quartz",
   "item.forgero.tsuba_sword_guard": "Tsuba guard",
+  "item.forgero.duelling_sword_guard": "Duelleing sword guard",
+  "item.forgero.agile_sword_guard": "Agile sword guard",
   "item.forgero.polar_bear_pelt": "Polar bear pelt",
   "item.forgero.katana_blade": "Katana blade",
   "item.forgero.broadsword_blade": "Broadsword blade",
@@ -22,8 +24,12 @@
   "item.forgero.refined_sword_blade": "Refined Sword blade",
   "item.forgero.mastercrafted_sword_blade": "Mastercrafted Sword blade",
   "item.forgero.serrated_sword_blade": "Serrated Sword blade",
+  "item.forgero.scimitar_blade": "Scimitar blade",
+  "item.forgero.rapier_blade": "Rapier blade",
   "item.forgero.knife_blade": "Knife blade",
+  "item.forgero.slanted_sword_blade": "Slanted sword blade",
   "item.forgero.battle_axe_head": "Battle Axe head",
+  "item.forgero.tree_chopper_head": "Tree chopper head",
   "item.forgero.path_digger_shovel_head": "Path Digger head",
   "item.forgero.grave_digger_head": "Grave Digger head",
   "item.forgero.lightweight_pickaxe_head": "Lightweight Pickaxe head",
