--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -47,6 +47,7 @@
   "itemGroup.forgero.parts": "Parts",
   "itemGroup.forgero.schematics": "Schematics",
   "item.forgero.scabbard": "Scabbard",
+  "item.forgero.empty_repair_kit": "Empty repair kit",
   "item.forgero.spiked_binding": "Spiked binding",
   "item.forgero.sword_guard": "Sword guard",
   "item.forgero.kimiri_sword_guard": "Kimiri sword guard",
