Created scrappy bindings and basic wood recipes

--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.forgero.scrappy_binding": "Scrappy binding",
   "item.forgero.string": "String",
   "item.forgero.vine": "Vines",
   "item.forgero.twisting_vines": "Twisting Vines",
