Tweaked and balanced almost all schematics and materials

--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -15,8 +15,8 @@
   "item.forgero.magnetico": "Magnetico",
   "item.forgero.quartz": "Quartz",
   "item.forgero.tsuba_sword_guard": "Tsuba guard",
-  "item.forgero.duelling_sword_guard": "Duelleing sword guard",
-  "item.forgero.agile_sword_guard": "Agile sword guard",
+  "item.forgero.duelling_sword_guard": "Duelling guard",
+  "item.forgero.agile_sword_guard": "Agile guard",
   "item.forgero.polar_bear_pelt": "Polar bear pelt",
   "item.forgero.katana_blade": "Katana blade",
   "item.forgero.broadsword_blade": "Broadsword blade",
