Custom model recognition

--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -27,6 +27,7 @@
   "item.forgero.scimitar_blade": "Scimitar blade",
   "item.forgero.rapier_blade": "Rapier blade",
   "item.forgero.knife_blade": "Knife blade",
+  "item.forgero.sacrificial_dagger_blade": "Sacrificial dagger blade",
   "item.forgero.slanted_sword_blade": "Slanted sword blade",
   "item.forgero.battle_axe_head": "Battle Axe head",
   "item.forgero.tree_chopper_head": "Tree chopper head",
