--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/zh_cn.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/zh_cn.json
@@ -1,183 +1,31 @@
 {
-  "itemGroup.forgero.toolparts": "工具部件",
-  "itemGroup.forgero.tools": "工具",
-  "advancements.forgero.root.title": "一个充满可能性的世界",
-  "advancements.forgero.root.description": "探索Forgero的世界",
-  "advancements.forgero.toolpart.title": "一个重要的成分",
-  "advancements.forgero.toolpart.description": "这些有很多",
-  "advancements.forgero.tool.title": "全套方案",
-  "advancements.forgero.tool.description": "合成工具！",
-  "advancements.forgero.head.title": "这看起来很有用",
-  "advancements.forgero.head.description": "合成你的第一个工具头部",
-  "advancements.forgero.handle.title": "把握住",
-  "advancements.forgero.handle.description": "合成你的第一个手柄",
-  "advancements.forgero.binding.title": "偷偷升级",
-  "advancements.forgero.binding.description": "合成你的第一个绑定结",
-  "advancements.forgero.schematic.title": "我想知道我可以用它做什么",
-  "advancements.forgero.schematic.description": "找到或制作你的第一个蓝图",
-  "advancements.forgero.schematic_vein.title": "这看起来确实很有用",
-  "advancements.forgero.schematic_vein.description": "寻找开采蓝图",
-  "advancements.forgero.schematic_pattern.title": "嗯，3x3？",
-  "advancements.forgero.schematic_pattern.description": "寻找开采蓝图",
-  "advancements.forgero.schematic_dense.title": "Thicc",
-  "advancements.forgero.schematic_dense.description": "寻找你的第一个坚韧手柄蓝图",
-  "advancements.forgero.gem.title": "闪亮升级",
-  "advancements.forgero.gem.description": "合成你的第一个宝石",
-  "advancements.forgero.secondary.title": "双层！",
-  "advancements.forgero.secondary.description": "机会多多",
-  "item.forgero.gem": "宝石",
-  "item.forgero.magnetico": "磁性",
-  "item.forgero.magnetico_gem": "磁力宝石",
+  "item.forgero.scrappy_binding": "破碎的绑定结",
+  "item.forgero.string": "线",
+  "item.forgero.vine": "藤蔓",
+  "item.forgero.twisting_vines": "缠怨藤",
+  "item.forgero.weeping_vines": "垂泪藤",
+  "item.forgero.secondary_material": "软性材质",
+  "item.forgero.deepslate": "深板岩",
+  "item.forgero.calcite": "方解石",
   "item.forgero.oak": "橡木",
   "item.forgero.spruce": "云杉木",
   "item.forgero.birch": "白桦木",
   "item.forgero.acacia": "金合欢木",
-  "item.forgero.jungle": "丛林木",
-  "item.forgero.darkoak": "深色橡木",
-  "item.forgero.stone": "石头",
+  "item.forgero.jungle": "从林木",
+  "item.forgero.dark_oak": "深色橡木",
+  "item.forgero.stone": "石",
   "item.forgero.iron": "铁",
   "item.forgero.gold": "金",
   "item.forgero.copper": "铜",
   "item.forgero.diorite": "闪长岩",
   "item.forgero.granite": "花岗岩",
   "item.forgero.andesite": "安山岩",
+  "item.forgero.glowstone": "萤石",
+  "item.forgero.leather": "皮革",
   "item.forgero.warped": "诡异木",
   "item.forgero.crimson": "绯红木",
-  "item.forgero.rabbithide": "兔子皮",
-  "item.forgero.phantommembrane": "幻翼膜",
+  "item.forgero.rabbit_hide": "兔子皮",
+  "item.forgero.phantom_membrane": "幻翼膜",
   "item.forgero.diamond": "钻石",
-  "item.forgero.netherite": "下界合金",
-  "item.forgero.handle": "手柄",
-  "item.forgero.binding": "绑定结",
-  "item.forgero.head": "头",
-  "item.forgero.pickaxehead": "镐头",
-  "item.forgero.sword": "剑",
-  "item.forgero.hoe": "锄",
-  "item.forgero.axe": "斧",
-  "item.forgero.pickaxe": "镐",
-  "item.forgero.shovel": "锹",
-  "item.forgero.hoehead": "锄头",
-  "item.forgero.swordhead": "剑刃",
-  "item.forgero.shovelhead": "铲头",
-  "item.forgero.axehead": "斧头",
-  "item.forgero.schematic": "蓝图",
-  "item.forgero.dense": "坚韧",
-  "item.forgero.reinforced": "加强",
-  "item.forgero.vein": "矿脉挖掘",
-  "item.forgero.pattern": "样板挖掘",
-  "item.forgero.weakvein": "弱开采",
-  "item.forgero.oak_handle_default": "橡木手柄",
-  "item.forgero.birch_handle_default": "白桦木手柄",
-  "item.forgero.spruce_handle_default": "云杉木手柄",
-  "item.forgero.stone_handle_default": "石质手柄",
-  "item.forgero.iron_handle_default": "铁质手柄",
-  "item.forgero.gold_handle_default": "金质手柄",
-  "item.forgero.diamond_handle_default": "钻石手柄",
-  "item.forgero.netherite_handle_default": "下界合金手柄",
-  "item.forgero.oak_handle_dense": "致密橡木手柄",
-  "item.forgero.birch_handle_dense": "致密白桦木手柄",
-  "item.forgero.stone_handle_dense": "致密石质手柄",
-  "item.forgero.acacia_handle_dense": "致密金合欢手柄",
-  "item.forgero.iron_handle_dense": "致密铁质手柄",
-  "item.forgero.gold_handle_dense": "致密金质手柄",
-  "item.forgero.diamond_handle_dense": "致密钻石手柄",
-  "item.forgero.netherite_handle_dense": "致密下界合金手柄",
-  "item.forgero.oak_handle_reinforced": "加强橡木手柄",
-  "item.forgero.birch_handle_reinforced": "加强白桦木手柄",
-  "item.forgero.stone_handle_reinforced": "加强石质手柄",
-  "item.forgero.acacia_handle_reinforced": "加强金合欢手柄",
-  "item.forgero.iron_handle_reinforced": "加强铁质手柄",
-  "item.forgero.gold_handle_reinforced": "加强金质手柄",
-  "item.forgero.diamond_handle_reinforced": "加强钻石手柄",
-  "item.forgero.netherite_handle_reinforced": "加强下界合金手柄",
-  "item.forgero.oak_binding_default": "橡木绑定结",
-  "item.forgero.birch_binding_default": "白桦木绑定结",
-  "item.forgero.spruce_binding_default": "云杉木绑定结",
-  "item.forgero.stone_binding_default": "石质绑定结",
-  "item.forgero.iron_binding_default": "铁质绑定结",
-  "item.forgero.gold_binding_default": "金质绑定结",
-  "item.forgero.diamond_binding_default": "钻石绑定结",
-  "item.forgero.netherite_binding_default": "下界合金绑定结",
-  "item.forgero.oak_pickaxe_head": "橡木镐头",
-  "item.forgero.birch_pickaxe_head": "白桦木镐头",
-  "item.forgero.spruce_pickaxe_head": "云杉木镐头",
-  "item.forgero.stone_pickaxe_head": "石质镐头",
-  "item.forgero.iron_pickaxe_head": "铁质镐头",
-  "item.forgero.gold_pickaxe_head": "金质镐头",
-  "item.forgero.diamond_pickaxe_head": "钻石镐头",
-  "item.forgero.netherite_pickaxe_head": "下界合金镐头",
-  "item.forgero.oak_shovel_head": "橡木铲头",
-  "item.forgero.birch_shovel_head": "白桦木铲头",
-  "item.forgero.spruce_shovel_head": "云杉木铲头",
-  "item.forgero.stone_shovel_head": "石质铲头",
-  "item.forgero.iron_shovel_head": "铁质铲头",
-  "item.forgero.gold_shovel_head": "金质铲头",
-  "item.forgero.diamond_shovel_head": "钻石铲头",
-  "item.forgero.netherite_shovel_head": "下界合金铲头",
-  "item.forgero.iron_pickaxe": "铁镐",
-  "item.forgero.oak_pickaxe": "橡木镐",
-  "item.forgero.birch_pickaxe": "白桦木镐",
-  "item.forgero.spruce_pickaxe": "云杉木镐",
-  "item.forgero.stone_pickaxe": "石镐",
-  "item.forgero.gold_pickaxe": "金镐",
-  "item.forgero.acacia_pickaxe": "金合欢木镐",
-  "item.forgero.diamond_pickaxe": "钻石镐",
-  "item.forgero.netherite_pickaxe": "下界合金镐",
-  "item.forgero.iron_shovel": "铁锹",
-  "item.forgero.acacia_shovel": "金合欢木锹",
-  "item.forgero.oak_shovel": "橡木锹",
-  "item.forgero.birch_shovel": "白桦木锹",
-  "item.forgero.spruce_shovel": "云杉木锹",
-  "item.forgero.stone_shovel": "石锹",
-  "item.forgero.gold_shovel": "金锹",
-  "item.forgero.diamond_shovel": "钻石锹",
-  "item.forgero.netherite_shovel": "下界合金锹",
-  "item.forgero.netherite_shovelhead": "下界合金铲头",
-  "item.forgero.oak_shovelhead": "橡木铲头",
-  "item.forgero.birch_shovelhead": "白桦木铲头",
-  "item.forgero.spruce_shovelhead": "云杉木铲头",
-  "item.forgero.stone_shovelhead": "石质铲头",
-  "item.forgero.iron_shovelhead": "铁质铲头",
-  "item.forgero.gold_shovelhead": "金质铲头",
-  "item.forgero.diamond_shovelhead": "钻石铲头",
-  "item.forgero.netherite_pickaxehead": "下界合金镐头",
-  "item.forgero.oak_head": "橡木镐头",
-  "item.forgero.acacia_pickaxehead": "金合欢木镐头",
-  "item.forgero.birch_pickaxehead": "白桦木镐头",
-  "item.forgero.spruce_pickaxehead": "云杉木镐头",
-  "item.forgero.stone_pickaxehead": "石质镐头",
-  "item.forgero.iron_pickaxehead": "铁质镐头",
-  "item.forgero.gold_pickaxehead": "金质镐头",
-  "item.forgero.diamond_pickaxehead": "钻石镐头",
-  "item.forgero.netherite_axehead": "下界合金斧头",
-  "item.forgero.oak_axehead": "橡木斧头",
-  "item.forgero.acacia_axehead": "金合欢木斧头",
-  "item.forgero.birch_axehead": "白桦木斧头",
-  "item.forgero.spruce_axehead": "云杉木斧头",
-  "item.forgero.stone_axehead": "石质斧头",
-  "item.forgero.iron_axehead": "铁质斧头",
-  "item.forgero.gold_axehead": "金质斧头",
-  "item.forgero.diamond_axehead": "钻石斧头",
-  "item.forgero.acacia_axe": "金合欢木斧",
-  "item.forgero.birch_axe": "白桦木斧",
-  "item.forgero.spruce_axe": "云杉木斧",
-  "item.forgero.stone_axe": "石斧",
-  "item.forgero.iron_axe": "铁斧",
-  "item.forgero.gold_axe": "金斧",
-  "item.forgero.warped_axe": "诡异木斧",
-  "item.forgero.crimson_axe": "绯红木斧",
-  "item.forgero.andesite_axe": "安山岩斧",
-  "item.forgero.jungle_axe": "丛林木斧",
-  "item.forgero.darkoak_axe": "深色橡木斧",
-  "item.forgero.diorite_axe": "闪长岩斧",
-  "item.forgero.diamond_axe": "钻石斧",
-  "item.forgero.netherite_axe": "下界合金斧",
-  "item.forgero.emerald_gem": "绿宝石宝石(耐久)",
-  "item.forgero.diamond_gem": "钻石宝石(耐久)",
-  "item.forgero.redstone_gem": "红石宝石(攻击速度)",
-  "item.forgero.lapis_gem": "青金石宝石(采矿速度)",
-  "item.forgero.ender_gem": "末影珍珠宝石(采矿速度)",
-  "item.forgero.stoneheart_gem": "岩心宝石(对岩石的采矿速度增加)",
-  "item.forgero.quartz_gem": "石英宝石",
-  "item.forgero.blazedstoneheart_gem": "炽热岩心宝石(对下界岩石的采矿速度增加)"
+  "item.forgero.netherite": "下界合金"
 }
