--- a/forgero-fabric/src/main/resources/assets/forgero/lang/zh_cn.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/zh_cn.json
@@ -1,183 +1,106 @@
 {
-  "itemGroup.forgero.toolparts": "工具部件",
-  "itemGroup.forgero.tools": "工具",
-  "advancements.forgero.root.title": "一个充满可能性的世界",
-  "advancements.forgero.root.description": "探索Forgero的世界",
-  "advancements.forgero.toolpart.title": "一个重要的成分",
-  "advancements.forgero.toolpart.description": "这些有很多",
+  "block.forgero.assembly_station": "装配台",
+  "itemGroup.forgero.forgero": "锻合",
+  "util.forgero.name_separator": "",
+  "advancements.forgero.root.title": "天马行空的世界",
+  "advancements.forgero.root.description": "探索锻合模组的世界",
+  "advancements.forgero.toolpart.title": "不可或缺",
+  "advancements.forgero.toolpart.description": "可不止这点哦",
   "advancements.forgero.tool.title": "全套方案",
-  "advancements.forgero.tool.description": "合成工具！",
-  "advancements.forgero.head.title": "这看起来很有用",
-  "advancements.forgero.head.description": "合成你的第一个工具头部",
-  "advancements.forgero.handle.title": "把握住",
-  "advancements.forgero.handle.description": "合成你的第一个手柄",
-  "advancements.forgero.binding.title": "偷偷升级",
-  "advancements.forgero.binding.description": "合成你的第一个绑定结",
-  "advancements.forgero.schematic.title": "我想知道我可以用它做什么",
-  "advancements.forgero.schematic.description": "找到或制作你的第一个蓝图",
-  "advancements.forgero.schematic_vein.title": "这看起来确实很有用",
-  "advancements.forgero.schematic_vein.description": "寻找开采蓝图",
-  "advancements.forgero.schematic_pattern.title": "嗯，3x3？",
-  "advancements.forgero.schematic_pattern.description": "寻找开采蓝图",
-  "advancements.forgero.schematic_dense.title": "Thicc",
-  "advancements.forgero.schematic_dense.description": "寻找你的第一个坚韧手柄蓝图",
-  "advancements.forgero.gem.title": "闪亮升级",
-  "advancements.forgero.gem.description": "合成你的第一个宝石",
+  "advancements.forgero.tool.description": "制作一把工具！",
+  "advancements.forgero.head.title": "看起来很实用",
+  "advancements.forgero.head.description": "制作你的第一个工具头部",
+  "advancements.forgero.handle.title": "牢牢“把握”",
+  "advancements.forgero.handle.description": "制作你的第一个手柄",
+  "advancements.forgero.binding.title": "强化连接",
+  "advancements.forgero.binding.description": "制作你的第一个绑定结",
+  "advancements.forgero.schematic.title": "何以用之",
+  "advancements.forgero.schematic.description": "找到或制作你的第一张蓝图",
+  "advancements.forgero.schematic_vein.title": "这会派上用场的",
+  "advancements.forgero.schematic_vein.description": "找到矿脉挖掘相关蓝图",
+  "advancements.forgero.schematic_pattern.title": "3x3是个啥？",
+  "advancements.forgero.schematic_pattern.description": "找到一张样板挖掘相关蓝图",
+  "advancements.forgero.schematic_dense.title": "丰腴身姿",
+  "advancements.forgero.schematic_dense.description": "找到你的第一张坚韧手柄蓝图",
+  "advancements.forgero.gem.title": "亮闪闪升级",
+  "advancements.forgero.gem.description": "制作你的第一颗宝石",
   "advancements.forgero.secondary.title": "双层！",
-  "advancements.forgero.secondary.description": "机会多多",
+  "advancements.forgero.secondary.description": "机遇无穷",
+  "item.forgero.attack_speed": "攻击速度",
+  "item.forgero.durability": "耐久",
+  "item.forgero.attack_damage": "攻击伤害",
+  "item.forgero.mining_level": "挖掘等级",
+  "item.forgero.rarity": "稀有度",
+  "item.forgero.mining_speed": "挖掘速度",
+  "item.forgero.slots": "槽位",
+  "item.forgero.material_count": " 材质：%s",
+  "item.forgero.attributes": "属性",
+  "item.forgero.properties": "特性",
+  "item.forgero.vein_mining": "连锁挖掘",
+  "item.forgero.pattern_mining": "模式挖掘",
+  "item.forgero.soul_reaping": "灵魂收割",
+  "item.forgero.ingredients": "部件",
+  "item.forgero.sword_tip": "剑锋",
+  "item.forgero.saber_blade": "军刀刀刃",
+  "itemGroup.forgero.weapons": "武器",
+  "itemGroup.forgero.tools": "工具",
+  "itemGroup.forgero.parts": "部件",
+  "itemGroup.forgero.schematics": "蓝图",
+  "item.forgero.scabbard": "鞘",
+  "item.forgero.empty_repair_kit": "空的修补包",
+  "item.forgero.spiked_binding": "带刺绑定结",
+  "item.forgero.sword_guard": "护手",
+  "item.forgero.kimiri_sword_guard": "kimiri护手",
+  "item.forgero.pummel": "配重",
+  "item.forgero.grip": "把手",
+  "item.forgero.vein_pickaxe_head": "连锁镐头",
+  "item.forgero.vein_axe_head": "连锁斧头",
+  "item.forgero.pickaxe_head": "镐头",
+  "item.forgero.axe_head": "斧头",
+  "item.forgero.shovel_head": "锹头",
+  "item.forgero.tool_binding": "绑定结",
+  "item.forgero.hoe_head": "锄头",
+  "item.forgero.material": "材质",
+  "item.forgero.tool_material": "工具材质",
+  "item.forgero.wood": "原木",
   "item.forgero.gem": "宝石",
-  "item.forgero.magnetico": "磁性",
+  "item.forgero.metal": "金属",
+  "item.forgero.trinket": "饰品",
+  "item.forgero.magnetico": "磁极核心",
+  "item.forgero.tip_reinforcement": "剑锋强化",
+  "item.forgero.mastercrafted_handle": "大师手柄",
+  "item.forgero.reinforcement": "强化",
   "item.forgero.magnetico_gem": "磁力宝石",
-  "item.forgero.oak": "橡木",
-  "item.forgero.spruce": "云杉木",
-  "item.forgero.birch": "白桦木",
-  "item.forgero.acacia": "金合欢木",
-  "item.forgero.jungle": "丛林木",
-  "item.forgero.darkoak": "深色橡木",
-  "item.forgero.stone": "石头",
-  "item.forgero.iron": "铁",
-  "item.forgero.gold": "金",
-  "item.forgero.copper": "铜",
-  "item.forgero.diorite": "闪长岩",
-  "item.forgero.granite": "花岗岩",
-  "item.forgero.andesite": "安山岩",
-  "item.forgero.warped": "诡异木",
-  "item.forgero.crimson": "绯红木",
-  "item.forgero.rabbithide": "兔子皮",
-  "item.forgero.phantommembrane": "幻翼膜",
-  "item.forgero.diamond": "钻石",
-  "item.forgero.netherite": "下界合金",
   "item.forgero.handle": "手柄",
   "item.forgero.binding": "绑定结",
-  "item.forgero.head": "头",
+  "item.forgero.head": "头部",
   "item.forgero.pickaxehead": "镐头",
   "item.forgero.sword": "剑",
   "item.forgero.hoe": "锄",
   "item.forgero.axe": "斧",
+  "item.forgero.broadsword": "阔剑",
+  "item.forgero.short_sword": "短剑",
+  "item.forgero.saber": "军刀",
+  "item.forgero.tachi": "太刀",
+  "item.forgero.saberhead": "军刀刀刃",
+  "item.forgero.broadswordhead": "阔剑剑刃",
+  "item.forgero.short_swordhead": "短剑剑刃",
+  "item.forgero.knifehead": "小刀刀刃",
+  "item.forgero.tachihead": "太刀刀刃",
+  "item.forgero.dense_handle": "坚韧手柄",
+  "item.forgero.reinforced_handle": "强化手柄",
+  "item.forgero.kimiri_binding": "kimiri绑定结",
+  "item.forgero.tsuba_binding": "太刀绑定结",
+  "item.forgero.pattern_axe": "斧",
+  "item.forgero.pattern_axehead": "模式挖掘斧头",
+  "item.forgero.knife": "小刀",
   "item.forgero.pickaxe": "镐",
   "item.forgero.shovel": "锹",
   "item.forgero.hoehead": "锄头",
   "item.forgero.swordhead": "剑刃",
-  "item.forgero.shovelhead": "铲头",
+  "item.forgero.shovelhead": "锹头",
   "item.forgero.axehead": "斧头",
   "item.forgero.schematic": "蓝图",
   "item.forgero.dense": "坚韧",
-  "item.forgero.reinforced": "加强",
-  "item.forgero.vein": "矿脉挖掘",
-  "item.forgero.pattern": "样板挖掘",
-  "item.forgero.weakvein": "弱开采",
-  "item.forgero.oak_handle_default": "橡木手柄",
-  "item.forgero.birch_handle_default": "白桦木手柄",
-  "item.forgero.spruce_handle_default": "云杉木手柄",
-  "item.forgero.stone_handle_default": "石质手柄",
-  "item.forgero.iron_handle_default": "铁质手柄",
-  "item.forgero.gold_handle_default": "金质手柄",
-  "item.forgero.diamond_handle_default": "钻石手柄",
-  "item.forgero.netherite_handle_default": "下界合金手柄",
-  "item.forgero.oak_handle_dense": "致密橡木手柄",
-  "item.forgero.birch_handle_dense": "致密白桦木手柄",
-  "item.forgero.stone_handle_dense": "致密石质手柄",
-  "item.forgero.acacia_handle_dense": "致密金合欢手柄",
-  "item.forgero.iron_handle_dense": "致密铁质手柄",
-  "item.forgero.gold_handle_dense": "致密金质手柄",
-  "item.forgero.diamond_handle_dense": "致密钻石手柄",
-  "item.forgero.netherite_handle_dense": "致密下界合金手柄",
-  "item.forgero.oak_handle_reinforced": "加强橡木手柄",
-  "item.forgero.birch_handle_reinforced": "加强白桦木手柄",
-  "item.forgero.stone_handle_reinforced": "加强石质手柄",
-  "item.forgero.acacia_handle_reinforced": "加强金合欢手柄",
-  "item.forgero.iron_handle_reinforced": "加强铁质手柄",
-  "item.forgero.gold_handle_reinforced": "加强金质手柄",
-  "item.forgero.diamond_handle_reinforced": "加强钻石手柄",
-  "item.forgero.netherite_handle_reinforced": "加强下界合金手柄",
-  "item.forgero.oak_binding_default": "橡木绑定结",
-  "item.forgero.birch_binding_default": "白桦木绑定结",
-  "item.forgero.spruce_binding_default": "云杉木绑定结",
-  "item.forgero.stone_binding_default": "石质绑定结",
-  "item.forgero.iron_binding_default": "铁质绑定结",
-  "item.forgero.gold_binding_default": "金质绑定结",
-  "item.forgero.diamond_binding_default": "钻石绑定结",
-  "item.forgero.netherite_binding_default": "下界合金绑定结",
-  "item.forgero.oak_pickaxe_head": "橡木镐头",
-  "item.forgero.birch_pickaxe_head": "白桦木镐头",
-  "item.forgero.spruce_pickaxe_head": "云杉木镐头",
-  "item.forgero.stone_pickaxe_head": "石质镐头",
-  "item.forgero.iron_pickaxe_head": "铁质镐头",
-  "item.forgero.gold_pickaxe_head": "金质镐头",
-  "item.forgero.diamond_pickaxe_head": "钻石镐头",
-  "item.forgero.netherite_pickaxe_head": "下界合金镐头",
-  "item.forgero.oak_shovel_head": "橡木铲头",
-  "item.forgero.birch_shovel_head": "白桦木铲头",
-  "item.forgero.spruce_shovel_head": "云杉木铲头",
-  "item.forgero.stone_shovel_head": "石质铲头",
-  "item.forgero.iron_shovel_head": "铁质铲头",
-  "item.forgero.gold_shovel_head": "金质铲头",
-  "item.forgero.diamond_shovel_head": "钻石铲头",
-  "item.forgero.netherite_shovel_head": "下界合金铲头",
-  "item.forgero.iron_pickaxe": "铁镐",
-  "item.forgero.oak_pickaxe": "橡木镐",
-  "item.forgero.birch_pickaxe": "白桦木镐",
-  "item.forgero.spruce_pickaxe": "云杉木镐",
-  "item.forgero.stone_pickaxe": "石镐",
-  "item.forgero.gold_pickaxe": "金镐",
-  "item.forgero.acacia_pickaxe": "金合欢木镐",
-  "item.forgero.diamond_pickaxe": "钻石镐",
-  "item.forgero.netherite_pickaxe": "下界合金镐",
-  "item.forgero.iron_shovel": "铁锹",
-  "item.forgero.acacia_shovel": "金合欢木锹",
-  "item.forgero.oak_shovel": "橡木锹",
-  "item.forgero.birch_shovel": "白桦木锹",
-  "item.forgero.spruce_shovel": "云杉木锹",
-  "item.forgero.stone_shovel": "石锹",
-  "item.forgero.gold_shovel": "金锹",
-  "item.forgero.diamond_shovel": "钻石锹",
-  "item.forgero.netherite_shovel": "下界合金锹",
-  "item.forgero.netherite_shovelhead": "下界合金铲头",
-  "item.forgero.oak_shovelhead": "橡木铲头",
-  "item.forgero.birch_shovelhead": "白桦木铲头",
-  "item.forgero.spruce_shovelhead": "云杉木铲头",
-  "item.forgero.stone_shovelhead": "石质铲头",
-  "item.forgero.iron_shovelhead": "铁质铲头",
-  "item.forgero.gold_shovelhead": "金质铲头",
-  "item.forgero.diamond_shovelhead": "钻石铲头",
-  "item.forgero.netherite_pickaxehead": "下界合金镐头",
-  "item.forgero.oak_head": "橡木镐头",
-  "item.forgero.acacia_pickaxehead": "金合欢木镐头",
-  "item.forgero.birch_pickaxehead": "白桦木镐头",
-  "item.forgero.spruce_pickaxehead": "云杉木镐头",
-  "item.forgero.stone_pickaxehead": "石质镐头",
-  "item.forgero.iron_pickaxehead": "铁质镐头",
-  "item.forgero.gold_pickaxehead": "金质镐头",
-  "item.forgero.diamond_pickaxehead": "钻石镐头",
-  "item.forgero.netherite_axehead": "下界合金斧头",
-  "item.forgero.oak_axehead": "橡木斧头",
-  "item.forgero.acacia_axehead": "金合欢木斧头",
-  "item.forgero.birch_axehead": "白桦木斧头",
-  "item.forgero.spruce_axehead": "云杉木斧头",
-  "item.forgero.stone_axehead": "石质斧头",
-  "item.forgero.iron_axehead": "铁质斧头",
-  "item.forgero.gold_axehead": "金质斧头",
-  "item.forgero.diamond_axehead": "钻石斧头",
-  "item.forgero.acacia_axe": "金合欢木斧",
-  "item.forgero.birch_axe": "白桦木斧",
-  "item.forgero.spruce_axe": "云杉木斧",
-  "item.forgero.stone_axe": "石斧",
-  "item.forgero.iron_axe": "铁斧",
-  "item.forgero.gold_axe": "金斧",
-  "item.forgero.warped_axe": "诡异木斧",
-  "item.forgero.crimson_axe": "绯红木斧",
-  "item.forgero.andesite_axe": "安山岩斧",
-  "item.forgero.jungle_axe": "丛林木斧",
-  "item.forgero.darkoak_axe": "深色橡木斧",
-  "item.forgero.diorite_axe": "闪长岩斧",
-  "item.forgero.diamond_axe": "钻石斧",
-  "item.forgero.netherite_axe": "下界合金斧",
-  "item.forgero.emerald_gem": "绿宝石宝石(耐久)",
-  "item.forgero.diamond_gem": "钻石宝石(耐久)",
-  "item.forgero.redstone_gem": "红石宝石(攻击速度)",
-  "item.forgero.lapis_gem": "青金石宝石(采矿速度)",
-  "item.forgero.ender_gem": "末影珍珠宝石(采矿速度)",
-  "item.forgero.stoneheart_gem": "岩心宝石(对岩石的采矿速度增加)",
-  "item.forgero.quartz_gem": "石英宝石",
-  "item.forgero.blazedstoneheart_gem": "炽热岩心宝石(对下界岩石的采矿速度增加)"
+  "item.forgero.reinforced": "强化"
 }
