--- a/forgero-extended/src/main/resources/assets/forgero/lang/zh_cn.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/zh_cn.json
@@ -14,7 +14,7 @@
   "item.forgero.blazed_stone_heart": "炽热岩心",
   "item.forgero.magnetico": "磁极核心",
   "item.forgero.quartz": "石英",
-  "item.forgero.tsuba_sword_guard": "镡护手",
+  "item.forgero.tsuba_sword_guard": "太刀护手",
   "item.forgero.duelling_sword_guard": "战斗护手",
   "item.forgero.agile_sword_guard": "敏捷护手",
   "item.forgero.polar_bear_pelt": "北极熊皮",
