Added ender dragon scale material

--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -18,6 +18,7 @@
   "item.forgero.duelling_sword_guard": "Duelling guard",
   "item.forgero.agile_sword_guard": "Agile guard",
   "item.forgero.polar_bear_pelt": "Polar bear pelt",
+  "item.forgero.ender_dragon_scale": "Ender scale",
   "item.forgero.katana_blade": "Katana blade",
   "item.forgero.broadsword_blade": "Broadsword blade",
   "item.forgero.shortsword_blade": "Shortsword blade",
