Creating builders for composites

--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -52,7 +52,7 @@
   "item.forgero.spiked_binding": "Spiked binding",
   "item.forgero.sword_guard": "Sword guard",
   "item.forgero.kimiri_sword_guard": "Kimiri sword guard",
-  "item.forgero.pummel": "Pummel",
+  "item.forgero.pummel": "Pommel",
   "item.forgero.grip": "Grip",
   "item.forgero.vein_pickaxe_head": "Vein Pickaxe head",
   "item.forgero.vein_axe_head": "Vein Axe head",
