feat(wip): Add `BooleanWidget` implementation
WIP. Only works if you press in specific parts for some reason. Maybe just add a lib to handle this, at this point.

--- a/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,3 +1,7 @@
 {
-  "forgero.menu.options": "Forgero configuration"
+  "forgero.menu.options": "Forgero configuration",
+  "forgero.menu.options.reset": "Reset",
+  "forgero.menu.options.true": "True",
+  "forgero.menu.options.false": "False",
+  "forgero.menu.options.loading": "Loading..."
 }
